# SiDB

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  README.en.md  README.md  deploy.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.check.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bootstrap.sh  gen-icons.sh  publish.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  sqlsplit.rs
src-tauri/src/adapters/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src-tauri/src/adapters/type_map/: mod.rs
src-tauri/src/ai/: agent.rs  audit.rs  context.rs  mod.rs  proposals.rs  provider.rs  redis_tools.rs  tools.rs
src-tauri/src/kv/: mod.rs
src-tauri/src/services/: connection.rs  credential.rs  dml.rs  edit.rs  export.rs  metadata.rs  mod.rs  query.rs  saved_query.rs  settings.rs
src-tauri/src/tunnel/: mod.rs
src-tauri/tests/: adapter_contract.rs  mysql_function_edit.rs  ssh_tunnel.rs
src/components/ai/: AiPanel.tsx
src/components/conn/: ConnectionDialog.tsx  NewDatabaseDialog.tsx
src/components/editor/: SqlEditor.tsx
src/components/export/: ExportDialog.tsx  ExportProgress.tsx
src/components/grid/: ResultGrid.tsx
src/components/query/: SaveQueryDialog.tsx
src/components/redis/: RedisWorkspace.tsx
src/components/settings/: SettingsDialog.tsx
src/components/tab/: TabBar.tsx
src/components/table/: EditTableDialog.tsx  NewTableDialog.tsx  NewViewDialog.tsx
src/components/toolbar/: TopBar.tsx
src/components/tree/: ConnectionTree.tsx
src/components/ui/: button.tsx  checkbox.tsx  confirm-dialog.tsx  context-menu.tsx  input.tsx  label.tsx  select.tsx  tabs.tsx  toaster.tsx
src/i18n/: ar.ts  de.ts  en.ts  es.ts  fr.ts  hi.ts  id.ts  index.ts  it.ts  ja.ts  ko.ts  nl.ts  pt-BR.ts  ru.ts  th.ts  tr.ts  vi.ts  zh-CN.ts  zh-TW.ts
src/ipc/: index.ts  types.ts
src/lib/: alter.test.ts  alter.ts  error.ts  monaco.ts  sql.ts  theme.ts  update.ts  utils.ts  value.test.ts  value.ts
src/stores/: ai.ts  export.ts  index.ts  toast.ts
