[package]
name = "sidb"
version = "1.2.1"
description = "轻量级跨平台数据库客户端"
authors = ["SiDB"]
edition = "2021"
rust-version = "1.75"

# The library is what Tauri links against; `sidb_lib` avoids a name clash with the bin.
[lib]
name = "sidb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 可执行文件名 = 产品名 SiDB（macOS 应用菜单/About 在 dev 下显示的就是它）。
[[bin]]
name = "SiDB"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# Database drivers — NO `any` feature; each adapter is independent.
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "mysql",
  "postgres",
  "sqlite",
  "chrono",
  "rust_decimal",
  "json",
  "uuid",
] }

# Redis (KV 引擎，单机 standalone)。raw command + connection-manager + rustls TLS。
redis = { version = "0.27", features = [
  "tokio-comp",
  "connection-manager",
  "tls-rustls",
  "tokio-rustls-comp",
] }

# SSH tunnel — pure Rust, avoids libssh2 cross-compile pain.
russh = "0.45"
russh-keys = "0.45"

# System keychain
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Serialization / errors / logging / ids
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1"
once_cell = "1"
dirs = "5"

# 导出 XLSX
rust_xlsxwriter = "0.79"

# 在线自动更新
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# AI HTTP (one-shot test connectivity in phase 1; full use in phase 2)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# macOS：运行期设置 Dock / About 面板图标（dev 下也能显示自定义 logo）。
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["mysql", "postgres"] }
tempfile = "3"
# 仅手动集成测试用：原生连接做 routine DDL 的 setup/teardown（adapter.execute 预处理协议无法 CREATE/DROP FUNCTION）。
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "mysql"] }

[features]
# Default Tauri custom protocol on release; devtools otherwise.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
